# mpmetric

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mpmetrics/src/mpmetrics/: api.py
mpmetrics/tests/: test_basic.py  test_plots_and_warnings.py
src/mpmetrics/: __init__.py  core.py  pandas_accessor.py
tests/: test_api_extras.py
