[build-system]
requires = ["hatchling>=1.22"]
build-backend = "hatchling.build"

[project]
name = "mpmetrics"
version = "0.1.0"
description = "Métricas robustas de tendencia central con ponderaciones adaptativas (media/mediana/moda/trimmed)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Andrés", email = "andres@example.com"}]
keywords = ["robust statistics", "central tendency", "kde", "bowley", "madn"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "matplotlib>=3.6",
  "scipy>=1.9",
  "pytest>=7.0"
]

[project.urls]
Repository = "https://github.com/AGAYON/mpmetrics"
Issues = "https://github.com/AGAYON/mpmetrics/issues"

# layout con `src/`
[tool.hatch.build.targets.wheel]
packages = ["src/mpmetrics"]

